# jarust

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  docker-compose.yml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  e2es.yml
await_map/: Cargo.toml
await_map/examples/: simple_await_map.rs
await_map/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
e2e/: Cargo.toml  docker-compose.e2e.yml
e2e/server_config/: janus.jcfg
e2e/src/: lib.rs
e2e/tests/: audiobridge.rs  core.rs  echotest.rs  t.rs  videoroom.rs
jarust/: Cargo.toml  README.md
jarust/examples/: README.md  audio_bridge.rs  echotest.rs  echotest_start_with_est.rs  raw_echotest.rs  restful.rs  secure_ws.rs  streaming.rs  video_room.rs
jarust/src/: await_map.rs  demux.rs  demuxer.rs  error.rs  jaconfig.rs  jaconnection.rs  jahandle.rs  japlugin.rs  japrotocol.rs  jarouter.rs  jasession.rs  jatask.rs  lib.rs  napmap.rs  nsp_registry.rs  nwconn.rs  params.rs  prelude.rs  respones.rs  tmanager.rs  utils.rs
jarust/src/dto/response/: mod.rs
jarust/src/jatask/: mod.rs
jarust/src/nw/: circular_map.rs  demuxer.rs  handle_msg.rs  japrotocol.rs  jarouter.rs  jatransport.rs  mod.rs  nwconn.rs  ringbuf_map.rs  router.rs  tmanager.rs  transaction_manager.rs
jarust/src/plugins/: mod.rs
jarust/src/plugins/echotest/: handle.rs  mod.rs
jarust/src/transport/: mod.rs  trans.rs  wasm_web_socket.rs  wasm_wss.rs  web_socket.rs  wss.rs
jarust/tests/: connection.rs  handle.rs  integration.rs  session.rs
jarust/tests/fixtures/: mod.rs
jarust/tests/mocks/: mock_connection.rs  mock_generate_transaction.rs  mock_handle.rs  mock_interface.rs  mock_session.rs  mock_transport.rs  mod.rs
jarust_core/: Cargo.toml  README.md
jarust_core/examples/: raw_echotest.rs  restful.rs  secure_ws.rs
jarust_core/src/: jaconnection.rs  jahandle.rs  jakeepalive.rs  jasession.rs  lib.rs
jarust_core/tests/: connection.rs  handle.rs  session.rs
jarust_core/tests/mocks/: mock_generate_transaction.rs  mock_interface.rs
jarust_interface/: Cargo.toml
jarust_interface/src/: error.rs  handle_msg.rs  janus_interface.rs  japrotocol.rs  lib.rs  respones.rs  tgenerator.rs
jarust_interface/src/restful/: mod.rs  restful_interface.rs
jarust_interface/src/websocket/: demuxer.rs  mod.rs  router.rs  websocket_client.rs  websocket_interface.rs
jarust_interface/src/websocket/connector/: mod.rs  native_tls_adapter.rs  rustls_adapter.rs
jarust_make_plugin/: Cargo.toml  README.md
jarust_make_plugin/src/: lib.rs
jarust_plugins/: Cargo.toml  README.md
jarust_plugins/examples/: README.md  audio_bridge.rs  audio_bridge_allowed.rs  audio_bridge_change_room.rs  audio_bridge_configure.rs  audio_bridge_create_room.rs  audio_bridge_destroy.rs  audio_bridge_destroy_all_rooms.rs  audio_bridge_edit.rs  audio_bridge_exists.rs  audio_bridge_join_room.rs  audio_bridge_join_then_leave.rs  audio_bridge_kick.rs  audio_bridge_kick_all.rs  audio_bridge_list.rs  audio_bridge_list_participants.rs  audio_bridge_mute_unmute.rs  audio_bridge_mute_unmute_room.rs  audio_bridge_suspend.rs  audio_bridge_suspend_and_resume.rs  echotest.rs  echotest_start_with_est.rs  echotest_start_with_establishment.rs  streaming.rs  video_room.rs
jarust_plugins/src/: common.rs  create_dto.rs  from.rs  lib.rs  make_dto.rs
jarust_plugins/src/audio_bridge/: common.rs  error.rs  events.rs  handle.rs  handles.rs  jahandle_ext.rs  messages.rs  mod.rs  msg_opitons.rs  msg_options.rs  params.rs  responses.rs  results.rs
jarust_plugins/src/echo_test/: events.rs  handle.rs  jahandle_ext.rs  mod.rs  msg_options.rs  params.rs
jarust_plugins/src/echotest/: events.rs  handle.rs  jahandle_ext.rs  messages.rs  mod.rs  msg_options.rs
jarust_plugins/src/streaming/: events.rs  handle.rs  jahandle_ext.rs  mod.rs  msg_options.rs  params.rs  responses.rs
jarust_plugins/src/video_room/: README.md  events.rs  handle.rs  jahandle_ext.rs  messages.rs  mod.rs  msg_options.rs  params.rs  responses.rs
jarust_rt/: Cargo.toml
jarust_rt/src/: lib.rs  tokio_rt.rs
jarust_transport/: Cargo.toml
jarust_transport/src/: error.rs  janus_interface.rs  japrotocol.rs  jatransport.rs  lib.rs  prelude.rs  router.rs  tgenerator.rs  trans.rs  transaction_manager.rs  wasm_web_socket.rs  web_socket.rs
jarust_transport/src/interface/: janus_interface.rs  mod.rs  restful_interface.rs  websocket_client.rs  websocket_interface.rs
jarust_transport/src/legacy/: trans.rs  web_socket.rs
jarust_transport/src/restful/: restful_interface.rs
jarust_transport/src/websocket/: demuxer.rs  mod.rs  napmap.rs  ringbuf_map.rs  router.rs  tmanager.rs  websocket_client.rs  websocket_interface.rs
jarust_transport_next/: Cargo.toml
jarust_transport_next/src/: demuxer.rs  error.rs  jatransport.rs  lib.rs  napmap.rs  respones.rs  transaction_gen.rs  transport.rs
jarust_transport_next/src/interfaces/: mod.rs  websocket.rs  websocket_transport.rs
jarust_transport_next/src/legacy/: mod.rs  web_socket.rs
napmap/: Cargo.toml  README.md
napmap/src/: bounded.rs  lib.rs  unbounded.rs
server_config/: janus.jcfg  janus.plugin.audiobridge.jcfg  janus.plugin.videoroom.jcfg
wasm_client/: Cargo.toml  Makefile  index.html
wasm_client/src/: lib.rs
