[workspace]
resolver = "2"
members = [
    "e2e",
    "jarust_core",
    "jarust_interface",
    "jarust_plugins",
    "jarust_rt",
    "jarust",
]

[workspace.package]
version = "0.7.0"
authors = ["Hamza Jadid"]
description = "A janus client SDK in Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["janus", "webrtc", "janus-gateway", "async"]
categories = ["network-programming", "asynchronous", "concurrency"]
edition = "2021"
repository = "https://github.com/Ghamza-Jd/jarust"

[workspace.dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = "1.40.0"
tracing = "0.1.40"
