[workspace]
resolver = "2"
members = [
    "e2e",
    "jarust_core",
    "jarust_interface",
    "jarust_plugins",
    "jarust_rt",
    "jarust",
]

[workspace.package]
version = "0.8.0"
authors = ["Hamza Jadid"]
description = "A janus client SDK in Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["janus", "webrtc", "janus-gateway", "async"]
categories = ["network-programming", "asynchronous", "concurrency"]
edition = "2021"
repository = "https://github.com/Ghamza-Jd/jarust"

[workspace.dependencies]
async-trait = "0.1.83"
bytes = "1.8.0"
futures-util = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = "1.41.0"
tracing = "0.1.40"
