[workspace]
resolver = "2"
members = [
    "e2e",
    "jarust_core",
    "jarust_interface",
    "jarust_plugins",
    "jarust_rt",
    "jarust",
]

[workspace.package]
version = "1.1.1"
authors = ["Hamza Jadid"]
description = "A janus client SDK in Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["janus", "webrtc", "janus-gateway", "async"]
categories = ["network-programming", "asynchronous", "concurrency"]
edition = "2021"
repository = "https://github.com/Ghamza-Jd/jarust"

[workspace.dependencies]
# Workspace crates
jarust_core = { version = "1.1.1", path = "jarust_core" }
jarust_interface = { version = "1.1.1", path = "jarust_interface" }
jarust_plugins = { version = "1.1.1", path = "jarust_plugins" }
jarust_rt = { version = "1.1.1", path = "jarust_rt" }

# 3rd Party
async-trait = "0.1.85"
bytes = "1.9.0"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "1.0.69"
tokio = "1.42.0"
tracing = "0.1.41"

# Dev deps
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
