[package]
name = "await_map"
version = "0.1.0"
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dashmap = "5.5.3"
tokio = { version = "1.35.1", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["time", "macros", "rt-multi-thread"] }
