[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
jarust = { version = "*", path = "../jarust" }
log = "0.4.20"
tokio = { version = "1.34.0", features = ["time", "macros", "rt-multi-thread"] }
simple_logger = "4.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
