[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
jarust = { version = "*", path = "../jarust" }
jarust_plugins = { version = "*", path = "../jarust_plugins" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["time", "macros", "rt-multi-thread"] }
