[package]
name = "e2e"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }

[dev-dependencies.jarust]
path = "../jarust"
features = ["audio-bridge-plugin", "echo-test-plugin"]
