[package]
name = "e2e"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
tracing-subscriber.workspace = true

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies.jarust]
path = "../jarust"
features = ["audio-bridge-plugin", "echo-test-plugin", "video-room-plugin"]
