[package]
name = "jarust"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
jarust_core = { version = "0.8.0", path = "../jarust_core", default-features = false }
jarust_interface = { version = "0.8.0", path = "../jarust_interface", default-features = false }
jarust_plugins = { version = "0.8.0", path = "../jarust_plugins", default-features = false }

[features]
default = ["use-native-tls", "tokio-rt"]

# Plugins
audio_bridge_plugin = ["jarust_plugins/audio_bridge"]
echo_test_plugin = ["jarust_plugins/echo_test"]
streaming_plugin = ["jarust_plugins/streaming"]
video_room_plugin = ["jarust_plugins/video_room"]
__plugin_expiremental = ["jarust_plugins/__experimental"]

# Interface
use-native-tls = ["jarust_interface/use-native-tls"]
use-rustls = ["jarust_interface/use-rustls"]

# Runtime
tokio-rt = [
    "jarust_core/tokio-rt",
    "jarust_interface/tokio-rt",
    "jarust_plugins/tokio-rt",
]

[dev-dependencies]
anyhow = "1.0.93"
async-trait.workspace = true
jarust_core = { path = "../jarust_core" }
jarust_interface = { path = "../jarust_interface" }
jarust_plugins = { path = "../jarust_plugins" }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
