[package]
name = "jarust"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
jarust_core.workspace = true
jarust_interface.workspace = true
jarust_plugins.workspace = true

[features]
default = ["use-native-tls", "tokio-rt"]

# Plugins
audio_bridge_plugin = ["jarust_plugins/audio_bridge"]
echo_test_plugin = ["jarust_plugins/echo_test"]
streaming_plugin = ["jarust_plugins/streaming"]
video_room_plugin = ["jarust_plugins/video_room"]
__plugin_expiremental = ["jarust_plugins/__experimental"]

# Interface
use-native-tls = [
    "jarust_core/use-native-tls",
    "jarust_interface/use-native-tls",
    "jarust_plugins/use-native-tls",
]
use-rustls = [
    "jarust_core/use-rustls",
    "jarust_interface/use-rustls",
    "jarust_plugins/use-rustls",
]

# Runtime
tokio-rt = [
    "jarust_core/tokio-rt",
    "jarust_interface/tokio-rt",
    "jarust_plugins/tokio-rt",
]

[dev-dependencies]
anyhow = "1.0.93"
async-trait.workspace = true
jarust_core = { workspace = true, default-features = true }
jarust_interface = { workspace = true, default-features = true }
jarust_plugins = { workspace = true, default-features = true }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
