[package]
name = "jarust"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
jarust_core.workspace = true
jarust_interface.workspace = true
jarust_plugins.workspace = true

[features]
default = ["use-native-tls", "tokio-rt"]

# Plugins
audio-bridge-plugin = ["jarust_plugins/audio-bridge"]
echo-test-plugin = ["jarust_plugins/echo-test"]
streaming-plugin = ["jarust_plugins/streaming"]
video-room-plugin = ["jarust_plugins/video-room"]
ffi-compatible = ["jarust_plugins/ffi-compatible"]
__plugin-expiremental = ["jarust_plugins/__experimental"]

# Interface
use-native-tls = [
    "jarust_core/use-native-tls",
    "jarust_interface/use-native-tls",
    "jarust_plugins/use-native-tls",
]
use-rustls = [
    "jarust_core/use-rustls",
    "jarust_interface/use-rustls",
    "jarust_plugins/use-rustls",
]

# Runtime
tokio-rt = [
    "jarust_core/tokio-rt",
    "jarust_interface/tokio-rt",
    "jarust_plugins/tokio-rt",
]

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies.jarust_plugins]
workspace = true
features = [
    "__experimental",
    "audio-bridge",
    "echo-test",
    "streaming",
    "video-room",
]
