[package]
name = "jarust_core"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
jarust_interface = { version = "0.7.0", path = "../jarust_interface" }
jarust_rt = { version = "0.7.0", path = "../jarust_rt" }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
anyhow = "1.0.89"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
