[package]
name = "jarust_core"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
jarust_interface = { version = "0.8.0", path = "../jarust_interface" }
jarust_rt = { version = "0.8.0", path = "../jarust_rt", default-features = false }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[features]
default = ["tokio-rt"]
tokio-rt = ["jarust_rt/tokio-rt"]

[dev-dependencies]
anyhow = "1.0.93"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
