[package]
name = "jarust_interface"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
indexmap = "2.7.0"
jarust_rt.workspace = true
rand.workspace = true
reqwest = { version = "0.12.12", features = ["json"] }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { version = "0.23.20", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
tokio-tungstenite = "0.26.1"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }

[features]
use-native-tls = ["tokio-tungstenite/native-tls"]
use-rustls = ["rustls", "rustls-native-certs", "tokio-tungstenite/__rustls-tls"]
tokio-rt = ["jarust_rt/tokio-rt"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
