[package]
name = "jarust_make_plugin"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
convert_case = "0.6.0"
quote = "1.0.35"
syn = "2.0.46"

[features]
default = ["echotest"]
echotest = []
