[package]
name = "jarust_plugins"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
jarust = { version = "0.7.0", path = "../jarust" }
jarust_interface = { version = "0.7.0", path = "../jarust_interface" }
jarust_rt = { version = "0.7.0", path = "../jarust_rt" }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
paste = "1.0.15"
# TODO: Check if we should settle bon or create a custom dto generator macro
bon = { version = "2.3.0", optional = true }

[features]
default = [
    "echo_test",
    "audio_bridge",
    "video_room",
    "streaming",
    "option_builder",
]
echo_test = []
audio_bridge = []
video_room = []
streaming = []
option_builder = ["bon"]
__experimental = []

[dev-dependencies]
anyhow = "1.0.89"
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
