[package]
name = "jarust_plugins"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
jarust_core = { version = "0.8.1", path = "../jarust_core", default-features = false }
jarust_interface = { version = "0.8.1", path = "../jarust_interface", default-features = false }
jarust_rt = { version = "0.8.1", path = "../jarust_rt", default-features = false }
paste = "1.0.15"
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[features]
default = [
    "tokio-rt",
    "use-native-tls",
    "echo_test",
    "audio_bridge",
    "video_room",
    "streaming",
]
echo_test = []
audio_bridge = []
video_room = []
streaming = []
__experimental = []

tokio-rt = [
    "jarust_rt/tokio-rt",
    "jarust_interface/tokio-rt",
    "jarust_core/tokio-rt",
]

use-native-tls = ["jarust_interface/use-native-tls"]
use-rustls = ["jarust_interface/use-rustls"]

[dev-dependencies]
anyhow = "1.0.93"
jarust_core = { version = "0.8.0", path = "../jarust_core" }
jarust_interface = { version = "0.8.0", path = "../jarust_interface" }
jarust_rt = { version = "0.8.0", path = "../jarust_rt" }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
