[package]
name = "jarust_plugins"
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "./README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
jarust_core.workspace = true
jarust_interface.workspace = true
jarust_rt.workspace = true
paste = "1.0.15"
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[features]
default = [
    "tokio-rt",
    "use-native-tls",
    "echo-test",
    "audio-bridge",
    "video-room",
    "streaming",
]
echo-test = []
audio-bridge = []
video-room = []
streaming = []
__experimental = []

tokio-rt = [
    "jarust_rt/tokio-rt",
    "jarust_interface/tokio-rt",
    "jarust_core/tokio-rt",
]

use-native-tls = ["jarust_interface/use-native-tls"]
use-rustls = ["jarust_interface/use-rustls"]

[dev-dependencies]
anyhow.workspace = true
jarust_core = { workspace = true, default-features = true }
jarust_interface = { workspace = true, default-features = true }
jarust_rt = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
