[package]
name = "jarust_rt"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true

[features]
default = ["tokio-rt"]
tokio-rt = []
