[package]
name = "jarust_transport"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util = "0.3.29"
indexmap = "2.2.6"
jarust_rt = { version = "0.5.0", path = "../jarust_rt" }
rand = "0.8.5"
serde_json.workspace = true
serde.workspace = true
thiserror = "1.0.51"
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { version = "0.22.2", optional = true }
rustls-native-certs = { version = "0.7.0", optional = true }
tokio-tungstenite = "0.21.0"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }

[features]
default = ["use-native-tls"]
use-native-tls = ["tokio-tungstenite/native-tls"]
use-rustls = ["rustls", "rustls-native-certs", "tokio-tungstenite/__rustls-tls"]
