[package]
name = "jarust_transport"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
indexmap = "2.5.0"
jarust_rt = { version = "0.5.0", path = "../jarust_rt" }
rand = "0.8.5"
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustls = { version = "0.23.13", optional = true }
rustls-native-certs = { version = "0.8.0", optional = true }
tokio-tungstenite = "0.24.0"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }

[features]
default = ["use-rustls"]
use-native-tls = ["tokio-tungstenite/native-tls"]
use-rustls = ["rustls", "rustls-native-certs", "tokio-tungstenite/__rustls-tls"]
