[package]
name = "wasm_client"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = { version = "1.0.0", features = ["color"] }
jarust = { version = "*", path = "../jarust" }
js-sys = "0.3.66"
log.workspace = true
tokio = { version = "1.35.1", features = ["rt"] }
wasm-bindgen = "0.2.89"
